pluginfeature: store pointer to plugin in addition to the plugin name

So we can reliably remove plugin features for a specific plugin later.

https://bugzilla.gnome.org/show_bug.cgi?id=604094